# SDL_Glad_Template

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  install.sh
Includes/: common.hpp
Includes/SDL2/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_bits.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_config.h.cmake  SDL_config.h.in  SDL_config_android.h  SDL_config_emscripten.h  SDL_config_iphoneos.h  SDL_config_macosx.h  SDL_config_minimal.h  SDL_config_ngage.h  SDL_config_os2.h  SDL_config_pandora.h  SDL_config_windows.h  SDL_config_wingdk.h  SDL_config_winrt.h  SDL_config_xbox.h  SDL_copying.h  SDL_cpuinfo.h  SDL_egl.h  SDL_endian.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_guid.h  SDL_haptic.h  SDL_hidapi.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_loadso.h  SDL_locale.h  (+54 more)
Sources/: CMakeLists.txt  main.cpp
Tests/: CMakeLists.txt  Test_sdl.cpp
